--- a/gb/ncid282_3.md
+++ b/gb/ncid282_3.md
@@ -16,8 +16,6 @@
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/18/n11663869.md#1" target="_blank">韩国瑜质疑台独 赖清德：其实你不懂我们的心</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/18/n11663869.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/412967-150x120.jpg" align ="left"></a>高雄市长韩国瑜今（18）日质疑赖清德的台独立场，赖清德回应“其实你不懂我们的心”今天晚间并在脸书回应，台湾已经是个主权独立的国家，名字叫中华民国，与中国互不隶属，执政后不必另外宣布台湾独立。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月18日 11:13 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/17/n11661439.md#1" target="_blank">坐飞机偶遇汤唯 网友晒照引发热议</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/17/n11661439.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/07/1-362-150x120.jpg" align ="left"></a>16日，有网友在微博晒出机场偶遇汤唯的照片。照片中，乘坐经济舱的汤唯，在登机前与普通乘客一样，除了站在那里排队安检，还独自一人提行李，可能因为行李太多太重，以至于汗水都沁透了衣服，网友不禁大赞她“活得非常真实”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月18日 11:24 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/17/n11661453.md#1" target="_blank">中国最大掩埋场提前25年填满 焚垃圾毁生态</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/17/n11661453.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/VCG11496599839-150x120.jpg" align ="left"></a>陕西省西安市的全国最大垃圾掩埋场原设计要撑到2044年，但由于每天1万吨垃圾的涌入，已提前25年被塞满。现大举兴建焚化炉， 但垃圾焚烧会断送中国生态的未来。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月18日 2:34 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/25/n11678984.md#1" target="_blank">妈妈辅导女儿功课发脾气 外公23年前早料到</a><br></h3>“不写作业母慈子孝，一写作业鸡飞狗跳”，这是大陆许多辅导孩子功课的家长真实的写照。近日，上海一位妈妈被不认真做功课的女儿气到抓狂，连连咆哮，没想到却乐坏了她的老父亲和老母亲。原来23年前，她的父亲给她辅导功课时就是这样，当时他甚至还气愤的写下了一封家书。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 3:28 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/25/n11678963.md#1" target="_blank">6厘米钻头打穿新房楼板 开封女屋主被吓呆</a><br></h3>装修新房本是高兴的事，可河南开封市尉氏县居民郑女士在装地板时却被自己的新房吓了一跳。近日，她反映，交房时她发现其中一卧室楼板中间部分凹陷，且房间地面有多处明显裂痕；在铺装木地板打地板龙骨时，楼板竟被6厘米的钻头打穿。开发商对此声称，这并不影响居住，若要退房，郑女士须还清按揭。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 3:00 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/25/n11678880.md#1" target="_blank">南昌初一学生校服收费2300元 家长难接受</a><br></h3>近日，江西南昌县的舒先生反映，孩子在该县豫章师院附属学校读初一，学校要求家长交钱统一买校服，费用实在太高，令家长难以接受。据了解，该校订购的校服共13件，费用总计2300元。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 2:25 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/25/n11678229.md#1" target="_blank">每日三退声明精选（2019/11/24）</a><br></h3>我几乎天天看大纪元、新唐人，使我更加看清了共产党的邪恶本质，并在力所能及条件下，揭露中共，弘扬自由、民主、法治的普世价值观，为中国民族的觉醒和未来，奋笔疾书，尽量感染身边的每一个人，家人、亲戚、朋友、同学，特别是今年以来的中美贸易战和香港民众反送中运动，为中国的未来，尽自己一份绵薄之力。在此，我庄严声明，退出中国共产党党籍，永不反悔。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 10:14 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/24/n11676572.md#1" target="_blank">每日三退声明精选（2019/11/23）</a><br></h3>打土豪分田地，害死那么多地主，是地主错了么？
@@ -40,5 +38,7 @@
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/19/n11665161.md#1" target="_blank">每日三退声明精选（2019/11/18）</a><br></h3>中共恶党窃国七十年，对十四亿中国人的谎言洗脑，对各种宗教信仰的残酷迫害有目共睹。最近在全世界众目睽睽下，又对香港人暴力残杀，还撒着弥天大谎。中共邪教不解体，老百姓没有好日子过。摆脱中共、消灭中共是中华儿女的责任。中共是全人类的万恶之源。是地地道道的政教合一的邪教！天灭中共！恢复中华民族敬天信神传统！做中华儿女！不做马列子孙。我们声明退出中共邪教的一切组织，决.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月19日 11:36 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/18/n11662461.md#1" target="_blank">每日三退声明精选（2019/11/17）</a><br></h3>力挺香港同胞，大陆人民不全部都是唯利是图的人，很多很多都是有良知的，很多人民都是支持香港同胞争取自由民主的，关于国内媒体的新闻跟下面的评论，都是官方水军的，媒体新闻跟评论根本就不让发表任何反对声音，我们只有在心里默默支持，请外界同胞不要相信大陆的媒体宣传跟评论，大陆千千万万人跟你们站在一起，只是发表不出来，我们爱这个国家，爱这个民族，只是不爱这个邪党。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月18日 11:53 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/17/n11661177.md#1" target="_blank">每日三退声明精选（2019/11/16）</a><br></h3>曾留学多年返回国内，有比较才知道透明的西方是充满人性的社会，而国内一切都是暗黑，在一党独裁专制下遍地腐败，道德全面堕落，根源就是这个党。现有身边明白人指点翻墙，特此声明，退出被拉入的所谓共青团和曾加入的所谓少先队。做中华儿女，不做马列子孙。天佑平安。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月17日 9:30 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/17/n11660831.md#1" target="_blank">前男友用不雅照威胁 福州女大学生遭吞药自杀</a><br></h3>“我马上把你的不雅照放学校论坛！”“明天我就去调查你爸妈，给叔叔阿姨惊喜！”10月17日，在福建福州外语外贸学院读大四的小静（化名 ）收到前男友发来的威胁信息。28日，小静吞下200颗药片自杀，被发现时她全身抽搐、口吐白沫。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月17日 2:36 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/17/n11660778.md#1" target="_blank">广东智障女孩遭多次性侵 8个月内二次怀孕</a><br></h3>广东茂名信宜市，存在智力障碍问题的12岁女孩小文（化名）被曝多次遭性侵，8个月内怀孕两次，并两次进行流产手术。11月16日，小文的家属表示，小文在今年3月就曾遭性侵怀孕，不料10月份再遭性侵。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月17日 1:36 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/ncid282_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid282.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid282_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid282_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid282_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid282_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid282_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid282_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid282_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid282_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid282_4.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/rieinn282/djy/blob/master/gb/ncid282_3.md#1<br><a href="https://github.com/rieinn282/djy/blob/master/gb/ncid282_3.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/rieinn282/djy/blob/master/gb/ncid282_3.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid282_3.htm">http://www.epochtimes.com/gb/ncid282_3.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
