--- a/gb/ncid282_4.md
+++ b/gb/ncid282_4.md
@@ -15,8 +15,9 @@
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/13/n11653121.md#1" target="_blank">台商砸钱监控 何韵诗手机被植间谍软体</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/13/n11653121.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/9c1f256400b94bbfcef484eaa5e28483-150x120.jpg" align ="left"></a>有媒体报导，近期只要有支持“反送中”的人士来台，就会有自称是“大陆台商”的人士，花钱委托征信社进行监控，手机甚至还会被植入间谍软体，通话内容及GPS定位等都会被掌握，包含香港艺人何韵诗、众志秘书长黄之锋在内，至少超过10人遭到跟监。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月13日 11:05 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/13/n11651857.md#1" target="_blank">中国猪肉危机超乎想像 影响全球市场</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/13/n11651857.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/1909091340312436-150x120.jpg" align ="left"></a>非洲猪瘟病毒席卷中国，中国猪肉价格飙涨，此危机已对全球市场造成影响，甚至是结构性改变。目前中国国内的猪瘟疫情此起彼伏，其引发的“连锁效应”引发国际关注。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月13日 10:49 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/11/n11649211.md#1" target="_blank">纽约庆祝第100届老兵节 川普亲临致辞</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/11/n11649211.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-1186985541-150x120.jpg" align ="left"></a>2019年11月11日，气候宜人。纽约市迎来了第100个一年一度的退伍军人节日，即“老兵节”。今年“老兵节”的特殊之处在于，美国现任总统川普出席了在麦迪逊广场公园举行的老兵节传统纪念仪式，这是美国总统历史性的第一次。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月12日 7:32 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/11/n11649148.md#1" target="_blank">被同学强塞纸片 河南7岁童眼中取出几十张</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/11/n11649148.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/bkn-20191111190514994-1111_00952_001_02b-150x120.jpg" align ="left"></a>河南许昌禹州市的7岁女生，近期遭3名男同学往眼睛内强塞小纸片，导致视力严重下降；而校长却认为只是小孩子玩耍“没有恶意”，3名男生至今未受任何惩处。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月12日 6:56 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/11/n11648932.md#1" target="_blank">“双11”背后 快递包装垃圾成环境之灾</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/11/n11648932.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/VCG111258650463-150x120.jpg" align ="left"></a>国际环保组织在大陆“双11”购物节发布了快递包装废弃物报告说，快递纸箱类包装废弃物重复使用率不到5%，包装垃圾将造成灾难性的后果。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月12日 5:25 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/17/n11660831.md#1" target="_blank">前男友用不雅照威胁 福州女大学生遭吞药自杀</a><br></h3>“我马上把你的不雅照放学校论坛！”“明天我就去调查你爸妈，给叔叔阿姨惊喜！”10月17日，在福建福州外语外贸学院读大四的小静（化名 ）收到前男友发来的威胁信息。28日，小静吞下200颗药片自杀，被发现时她全身抽搐、口吐白沫。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月17日 2:36 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/17/n11660778.md#1" target="_blank">广东智障女孩遭多次性侵 8个月内二次怀孕</a><br></h3>广东茂名信宜市，存在智力障碍问题的12岁女孩小文（化名）被曝多次遭性侵，8个月内怀孕两次，并两次进行流产手术。11月16日，小文的家属表示，小文在今年3月就曾遭性侵怀孕，不料10月份再遭性侵。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月17日 1:36 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/17/n11660719.md#1" target="_blank">男子价值过万包裹丢失 快递公司只赔1500</a><br></h3>快递寄出近一个多月后，浙江的陈先生才接到快递公司工作人员的来电，他被告知他寄出的包裹确认丢失。近日，陈先生表示，包裹是为客户订做的机械齿轮，价值1.3万元，由于寄出时未保价，快递公司表示只愿意赔偿1500元，这令他难以接受。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月17日 12:27 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/16/n11659882.md#1" target="_blank">重庆饲养员私自带幼女近距离摸熊猫受处理</a><br></h3>日前，重庆市动物园一名饲养人员未经许可，私自私自带人进入工作区域近距离观看大熊猫幼仔。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月16日 4:38 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/16/n11659775.md#1" target="_blank">川男7000元做结扎手术 4个月后妻怀孕</a><br></h3>四川崇州市一男子在蜀都医院花费7000多元做男性结扎手术，结果其妻子4个月后怀孕，做手术的医院被投诉。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月16日 2:47 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/15/n11657048.md#1" target="_blank">每日三退声明精选（2019/11/14）</a><br></h3>在全球关注香港人民捍卫民主自由运动的时刻，我们越来越看清了中共的邪恶。回想到八九六四及镇压法轮功，中共使用的一切镇压手段如出一辙。一个政府，一个政权靠谎言、欺骗等流氓手段镇压正义与良知，这在历史上是绝无仅有的...... 。我们不与邪恶为伍，退出年少时期加入的少先队组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月15日 10:16 AM							</td></tr>
@@ -28,6 +29,5 @@
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/12/n11649948.md#1" target="_blank">双十一妻贷款购物30余万元 丈夫无奈欲跳楼</a><br></h3>双十一，大陆民众疯狂购物，或许有很多便宜“福利”，但是狂买也会有让人承受不住的时候。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月12日 3:07 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/12/n11649670.md#1" target="_blank">每日三退声明精选（2019/11/11）</a><br></h3>我们知道了必须退队的原因，最近香港被大陆(中共)害的好惨，我老公是逃港人员，我每天祈祷老天保佑香港。感谢法轮功讲真话，法轮大法好！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月12日 12:18 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/12/n11649443.md#1" target="_blank">云南男子闯幼儿园喷氢氧化钠液体 伤54人</a><br></h3>11月11日，云南开远市一男子进入开远市东城幼儿园，用自制的氢氧化钠液体，喷向幼儿园师生，导致部分师生被灼伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月12日 10:20 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/11/n11649034.md#1" target="_blank">玻利维亚总统辞职 川普：向委内瑞拉释信号</a><br></h3>美国总统川普（特朗普）周一（11月11日）发表声明表示，玻利维亚总统辞职是西半球民主的重要时刻，并向委内瑞拉和尼加拉瓜等“非法政权”发出信号。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月12日 5:29 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/ncid282_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid282.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid282_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid282_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid282_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid282_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid282_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid282_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid282_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid282_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid282_5.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/rieinn282/djy/blob/master/gb/ncid282_4.md#1<br><a href="https://github.com/rieinn282/djy/blob/master/gb/ncid282_4.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/rieinn282/djy/blob/master/gb/ncid282_4.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid282_4.htm">http://www.epochtimes.com/gb/ncid282_4.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
