--- a/gb/news2007_4.md
+++ b/gb/news2007_4.md
@@ -25,7 +25,7 @@
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/15/n11658469.md#1" target="_blank">舵工谋财害命  数十年后遭报应</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/15/n11658469.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/6dbb4c7f2753c201a6e36d06299fb427-150x120.png" align ="left"></a>享受荣华富贵欢乐数十年，上天等到了这一刻才降灾祸来惩罚他，一家遭到灭顶。陈年往事重演了，……借债借得愈久，而所偿还的利息就需要越多！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 8:34 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/25/n11679403.md#1" target="_blank">青松絮语：被忽略的蓝天</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/25/n11679403.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/12/1811021635502483-150x120.jpg" align ="left"></a>我们会因为专注于某些东西而对另一些东西视而不见、听而不闻。尤其在苦难中，几乎所有的注意力都在眼前的辛苦与对未来的期待上，因而遮罩了很多很美好的东西，就像头顶的蓝天。所以，我们应当提醒自己，无论生活怎样消磨我们的内心，头顶的蓝天一直都在。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 6:15 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/21/n11671779.md#1" target="_blank">清代医家辑录：治疗疫病  医药之外另有良方</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/21/n11671779.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1807101144312483-150x120.jpg" align ="left"></a>清代著名医家刘奎，字文甫，号松峰，出生于中医世家，自幼学习医着。曾拜名医郭右陶、黄元御等为师。刘奎精研《内经》、《难经》等医着，对治疗瘟疫独树一帜。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 5:58 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/21/n11671242.md#1" target="_blank">9 岁男孩上课涂鸦被骂翻 现受聘在餐厅画一面墙</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/21/n11671242.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/09cf7d0bb6e5ee3fba749abcba698a3e-150x120.jpg" align ="left"></a>小时候在上课时不专心听课，却只顾着自己画自己的，这时被老师发现后??（我们或许都经历过，下场肯定不好！）；从此冒出来的那一点艺术火花就此灭尽了！不过，幸好英国的9岁男孩遇到开明的父母，他开心的正在餐厅的一大片白墙上做画呢！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 3:11 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/25/n11679726.md#1" target="_blank">五律：春</a><br></h3>广袖舞天穹，轻舒煦物风。 婀娜洒青翠，抖擞点丹红。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 12:08 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/25/n11679746.md#1" target="_blank">西江月．怀大志更要拘小节</a><br></h3>邪恶依然存在， 怎能忽略魔情。 辛勤稳重是精英， 谨慎无妨坚定。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 12:04 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/25/n11679748.md#1" target="_blank">七律：永恒</a><br></h3> 利令智昏人欲懵， 不思道义不思惩。 邪魔歪理迷难醒， 地狱列车狂敢登。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 12:05 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/25/n11679725.md#1" target="_blank">五律：夏</a><br></h3> 青鸾舞凉扇，玉女倚窗扉。 草木朝天跃，星辰与梦飞。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 12:05 AM			</td></tr>
