--- a/gb/ncid280_3.md
+++ b/gb/ncid280_3.md
@@ -23,7 +23,7 @@
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/10/2/n11563231.md#1" target="_blank">华西村玻璃桥“十一”垮塌 消息被当局封杀</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/10/2/n11563231.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/Untitled-2-1-150x120.gif" align ="left"></a>曾有所谓“天下第一村”政治符号的江苏省江阴市华西村，“十一”当天，一旅游景点发生严重事故，已至少造成10多人受伤，有网民怀疑受伤人数被“和谐”。怕事件恐带来政治冲击，官方封锁了相关资讯。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月02日 11:55 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/9/30/n11558320.md#1" target="_blank">中共续拆佛像 河北58尊摩崖佛像被铲平</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/9/30/n11558320.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/Untitled-2-150x120.gif" align ="left"></a>自从去年5月，中共中央统战部发动所谓整治大型露天宗教造像行动以来，中国各地佛像持续遭灾。河北“世界佛教之光”58尊摩崖石雕惨遭摧毁；两座寺院的800尊罗汉像也被拆光。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月01日 5:56 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/9/30/n11558103.md#1" target="_blank">庐山大火烧了三天三夜 中共官媒封锁消息</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/9/30/n11558103.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/L2-150x120.png" align ="left"></a>“十一”前夕，江西庐山发生火灾，接连烧了三天。为了不影响共产党过节，所有媒体均被禁止报导，只有网络消息零星传出。目前起火原因不明。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月01日 3:41 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/9/28/n11553151.md#1" target="_blank">宁杭高速一大客车与货车相撞 至少36死36伤</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/9/28/n11553151.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/Untitled-3-150x120.gif" align ="left"></a>28日，连接江苏南京至浙江杭州的宁杭高速公路，一辆旅游大客车与货车相撞，宜兴警方当日通报称，事故至少造成6人死亡，8人重伤。29日，警方就事故再发通报称，截至28日下午4时，已造成36人死亡，另有36人受伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月29日 4:27 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/10/30/n11621449.md#1" target="_blank">81天无雨土地干裂 江西安徽旱情严重</a><br></h3>七月下旬以来，大陆江西、安徽省持续高温且无降雨。官方称，平均无雨日有81天，江西、安徽各地发生严重旱情，部分地区出现特级旱情，土地龟裂、水稻枯死，农民损失惨重；江河湖库水位持续下级，部分地区出现民众饮水困难。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月30日 4:49 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/10/28/n11617418.md#1" target="_blank">延安市车载试验装置突爆炸 至少8死5伤</a><br></h3>10月27日，陕西省延安市延长县一车载试验装置完成试验后，在回程途中突然发生爆炸，导致8死5伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月28日 5:54 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/10/27/n11616220.md#1" target="_blank">甘肃深夜发生5.7级地震 民众逃到街上</a><br></h3>28日凌晨2时许，甘肃省甘南藏族自治州夏河县发生5.7级地震。合作市、夏河县震感强烈，并伴有余震，民众纷纷在寒冷的深夜外出避险。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月28日 6:53 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/10/25/n11611902.md#1" target="_blank">河南化工厂爆炸致1人死 珠海商铺突发大火</a><br></h3>10月25日上午，河南一家化工厂发生爆炸，目前已知事故造成1人死亡。现场画面显示，火势凶猛，现场掀起“蘑菇云”。附近居民表示，爆炸发生时自家房子颤抖，家中有玻璃被震碎。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月25日 7:05 PM							</td></tr>
