--- a/gb/news2007_5.md
+++ b/gb/news2007_5.md
@@ -1,4 +1,14 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/rieinn282/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>文化艺术</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/rieinn282/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/rieinn282/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/21/n11671242.md#1" target="_blank">9 岁男孩上课涂鸦被骂翻 现受聘在餐厅画一面墙</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/21/n11671242.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/09cf7d0bb6e5ee3fba749abcba698a3e-150x120.jpg" align ="left"></a>小时候在上课时不专心听课，却只顾着自己画自己的，这时被老师发现后??（我们或许都经历过，下场肯定不好！）；从此冒出来的那一点艺术火花就此灭尽了！不过，幸好英国的9岁男孩遇到开明的父母，他开心的正在餐厅的一大片白墙上做画呢！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 3:11 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/25/n11678778.md#1" target="_blank">用音乐帮助宝宝大脑健康发展</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/25/n11678778.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/shutterstock_193322240-150x120.jpg" align ="left"></a>：怎样用音乐帮助宝宝大脑健康发展？婴儿大脑时刻都在接受音频？
+
+
+本文刊载于旧金山11月23日教育版
+每周为您献上旧金山最新消息
+责任编辑：李欧......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 2:15 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/25/n11678244.md#1" target="_blank">入围选手聚纽约 新唐人油画大赛隆重登场</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/25/n11678244.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/DSCF3275-150x120.jpg" align ="left"></a>新唐人电视台举办的2019年第五届“全世界人物写实油画大赛”于11月24日正式拉开帷幕。在曼哈顿的萨玛港迪艺术俱乐部（Salmagundi Art Club）里，共有100多幅决赛作品展出。来自世界各地的画家对选手们的作品赞不绝口；第一天展览就迎来了不少当地观众，有人已经看好了作品，有意购买。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 11:41 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/24/n11677351.md#1" target="_blank">建立亲子的放松时间</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/24/n11677351.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1703202351472483-150x120.jpg" align ="left"></a>小时候，我与弟弟、妹妹都很喜欢往外婆家跑，因为一到那个地方，好像把所有压力抛诸脑后，再也不会马上被盯紧功课，或是提醒要复习今天学习的东西。外公与外婆只会问，“你们想吃什么？你们待会要到哪里玩？等阿公、阿嬷忙完的时候就带你们去。”这样惬意的生活，就好像到了世外桃源，真的身心灵都获得放松。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 11:24 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/21/n11671796.md#1" target="_blank">【无鱼坊的摄影心视界】红艳木鱼树上挂</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/21/n11671796.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/6545475f612af0feb03ae92be7974dd4-150x120.jpg" align ="left"></a>红红木鱼高高挂......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 10:41 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/8/31/n11489731.md#1" target="_blank">【医案】我儿子是不是阴阳人</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/8/31/n11489731.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/190813024736100093-150x120.jpg" align ="left"></a>一位爸爸带着10岁大瘦瘦的儿子，慌张的来看诊。爸爸的表情怪怪的，他很小声的，好像怕别人听见的说：“医师，你帮我儿子检查一下，看他是不是阴阳人？”看爸爸紧张的样子，我紧接着问：“怎么说？”于是爸爸掀起儿子的衣服，指着小男孩的乳房说：“你看，小男生第二性征还没出来，就先长乳房了！”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 10:00 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/16/n11660280.md#1" target="_blank">书生天资愚钝 魁星为何为他“换心”</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/16/n11660280.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/05/Xu_Xianqing_part05-150x120.jpg" align ="left"></a>魁星左手拿一个盘子，上面盛着一枚人心，右手拿一把锋利的刀。他走上前，骤然剖开光旭的前胸，遂即将手伸进去，取出心脏，再将盘上那颗心放入填补。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 9:00 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/22/n11673555.md#1" target="_blank">天地清明引(117) 明光殒－夜闻禁曲1</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/22/n11673555.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/05/001-2-150x120.jpg" align ="left"></a>三日后，飞剑门大婚。剑器也不想落个为老不尊的名声，是以未有宴请武林侠士，仅书信于白门柳告知。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 8:00 AM			</td></tr>
@@ -25,12 +35,7 @@
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/18/n11664269.md#1" target="_blank">夺命瘟疫黑死病 曾经败在他的手上</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/18/n11664269.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/dfaf80edff148dd194032e09ac8dc1ed-150x120.jpg" align ="left"></a>黑死病（鼠疫），有人称其“是比军队更可怕的敌人”。曾经肆虐欧洲，夺走了欧洲1/3人口的黑死病，最近惊现北京。已有媒体报导证实，北京多家医院、宾馆工作人员出现疫病感染及疑似病例。然而，中共“维稳”黑死病疫情，对外隐瞒消息，疫情恐怕比想像的还要严重。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月22日 6:00 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/9/11/4/n2711277.md#1" target="_blank">母亲的远见：孩子你长大后千万别入党</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/9/11/4/n2711277.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2009/11/612251329491017-150x120.gif" align ="left"></a>(shown)我母亲一生笃信神佛，与世无争，少言寡语，但却出语不凡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月22日 12:15 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/20/n11668405.md#1" target="_blank">天地清明引(114) 明光殒－侯门画风1</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/20/n11668405.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2010/03/7bf80405f1128b66c759925743ea4c8c-150x120.jpg" align ="left"></a>白门柳背着严承义，终于回返光明顶。严承义浑身是伤，白门柳将其慢慢放于榻上。严承义嘴角一开一合之间，吐出几个字：“莲……花……峰……白……云……坛……”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月22日 8:00 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/21/n11671620.md#1" target="_blank">台湾古典诗：桃园市花——桃花（二）</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/21/n11671620.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/11/1401120525271750-150x120.jpg" align ="left"></a>武陵有路指迷津，烂熳成蹊好避秦， 锦浪迎风香十里，绛霞映日醉三春；......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月21日 8:39 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/10/24/n11609851.md#1" target="_blank">伦勃朗的内心世界 作品历久不衰的原因</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/10/24/n11609851.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/2@1200x1200-150x120.jpg" align ="left"></a>伦勃朗藉由亲眼所见捕捉人性，让我们看到了自己。当看到我们自己的好与坏时，我们有了成长的空间。根本上来说，伦勃朗的作品，无论是藉由画中的人物或大师本人都可以成为今天的我们内心成长的媒介。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月21日 5:49 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/19/n11666257.md#1" target="_blank">和尚做东请众人吃猪肉  原来是为救难产</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/19/n11666257.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/ce0c9cb3266907a0456a45f24bfd61a6-150x120.jpg" align ="left"></a>李家产妇难产，已经煎熬了二天，腹部奇痛无比，胎儿却迟迟不落。他们请了医生催产，医术用尽，胎儿还是出不来。奇异的是，当众人赶到寺院，把猪肉吃完后，胎儿才呱呱落地。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月21日 5:44 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/15/n11659190.md#1" target="_blank">【才子佳人】鹣鲽情深 伴苏轼宦海浮沉的贤内助</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/15/n11659190.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/f0a50275c609f2abb8ab183849b55e57-150x120.jpg" align ="left"></a>苏轼19岁时，娶了同乡16岁的少女王弗。王弗是眉州青神人（今四川省眉山市青神县），1039年出生于一个书香之家，是进士王方之女。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月21日 3:32 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/11/n11648506.md#1" target="_blank">清初三帝极重视臣子书法 赏罚有奇招有正典</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/11/n11648506.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/bad93e4c482afeb2beafbdff0e91dd0b-150x120.jpg" align ="left"></a>清初三帝日理万机治国有成，且在书法上都很可观，展现了学养底蕴深厚，这些圣君对臣子的书法养成教育或表现成绩又是如何对待呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月21日 9:00 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/20/n11668708.md#1" target="_blank">誓言断想</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/20/n11668708.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2011/07/101121232353100445-150x120.jpg" align ="left"></a>人之立誓，不管你是出于被迫、无奈，还是有意、无意，上天都已谨记了这一切，都会在将来的某个时候一一兑现。只因人太迷于物质的享乐中，对善恶因果已不再相信罢了，但天道一定公平啊！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月21日 8:20 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/24/n11677411.md#1" target="_blank">一七令．和之曲</a><br></h3> 和。 岁月，如歌。 贤儿媳，好婆婆。 妯娌和睦，无风无波。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 5:25 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/22/n11674444.md#1" target="_blank">诗歌：味道</a><br></h3> 细品千年愿，陈香万古禅。 三拍诗酒碗，一串泪珠盘。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月22日 11:39 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/news2007_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2007.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2007_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2007_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2007_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2007_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2007_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2007_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2007_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2007_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/news2007_6.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/rieinn282/djy/blob/master/gb/news2007_5.md#1<br><a href="https://github.com/rieinn282/djy/blob/master/gb/news2007_5.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/rieinn282/djy/blob/master/gb/news2007_5.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news2007_5.htm">http://www.epochtimes.com/gb/news2007_5.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
